--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <!-- start section -->
@@ -30,31 +32,23 @@
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
             <h3>Пунктуальность</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
             <h3>Планирование</h3>
             <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
             <h3>Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -63,28 +57,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img
-              src="images/box-1.jpg"
-              alt="work with computer"
-              width="370"
-              height="294"
-            />
+            <img src="images/box-1.jpg" alt="work with computer" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="images/box-2.jpg"
-              alt="work with smartphone"
-              width="370"
-              height="294"
-            />
+            <img src="images/box-2.jpg" alt="work with smartphone" width="370" height="294" />
           </li>
           <li>
-            <img
-              src="images/box-3.jpg"
-              alt="work with tablet"
-              width="370"
-              height="294"
-            />
+            <img src="images/box-3.jpg" alt="work with tablet" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -93,42 +72,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="images/img-p1.jpg"
-              alt="Our staff"
-              width="270"
-              height="260"
-            />
+            <img src="images/img-p1.jpg" alt="Our staff" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img
-              src="images/img-p2.jpg"
-              alt="Our staff"
-              width="270"
-              height="260"
-            />
+            <img src="images/img-p2.jpg" alt="Our staff" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="images/img-p3.jpg"
-              alt="Our staff"
-              width="270"
-              height="260"
-            />
+            <img src="images/img-p3.jpg" alt="Our staff" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img
-              src="images/img-p4.jpg"
-              alt="Our staff"
-              width="270"
-              height="260"
-            />
+            <img src="images/img-p4.jpg" alt="Our staff" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -139,8 +98,12 @@
       <a href="./index.html">WebStudio </a>
       <address>
         <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a><br />
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
